// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`close-icon prop 1`] = `
<div class="win-image-preview" name="win-fade"><i role="button" class="win-icon win-icon-close win-image-preview__close-icon win-image-preview__close-icon--top-right">
    <!----></i>
  <div class="win-swipe win-image-preview__swipe">
    <div class="win-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="win-image-preview__index">1 / 0</div>
</div>
`;

exports[`close-icon-position prop 1`] = `
<div class="win-image-preview" name="win-fade"><i role="button" class="win-icon win-icon-close win-image-preview__close-icon win-image-preview__close-icon--top-left">
    <!----></i>
  <div class="win-swipe win-image-preview__swipe">
    <div class="win-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="win-image-preview__index">1 / 0</div>
</div>
`;

exports[`cover slot 1`] = `
<div class="win-image-preview" name="win-fade">
  <div class="win-swipe win-image-preview__swipe">
    <div class="win-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="win-image-preview__index">1 / 0</div>
  <div class="win-image-preview__cover">Custom Cover Content</div>
</div>
`;

exports[`index slot 1`] = `
<div class="win-image-preview" name="win-fade">
  <div class="win-swipe win-image-preview__swipe">
    <div class="win-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="win-image-preview__index">Custom Index</div>
</div>
`;

exports[`render image 1`] = `
<div class="win-image-preview" name="win-fade">
  <div class="win-swipe win-image-preview__swipe">
    <div class="win-swipe__track" style="width: 0px; transition-duration: 500ms; transform: translateX(0px);">
      <div class="win-swipe-item" style="width: 0px;"></div>
      <div class="win-swipe-item" style="width: 0px;"></div>
      <div class="win-swipe-item" style="width: 0px;"></div>
    </div>
  </div>
  <div class="win-image-preview__index">1 / 3</div>
</div>
`;

exports[`set show-index prop to false 1`] = `
<div class="win-image-preview" name="win-fade">
  <div class="win-swipe win-image-preview__swipe">
    <div class="win-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
</div>
`;

exports[`zoom 1`] = `
<div class="win-image win-image-preview__image" style="transition-duration: 0s; transform: scale3d(2, 2, 1) translate(0px, NaNpx);"><img src="https://img.yzcdn.cn/1.png" class="win-image__img" style="object-fit: contain;">
  <div class="win-image__loading">
    <div class="win-loading win-loading--spinner"><span class="win-loading__spinner win-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
  </div>
</div>
`;
